# pi_logic_

./: .gitignore  CMakeLists.txt  README.md  mainwindow.ui
build-pi_logic_-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  pi_logic_  qtcsettings.cmake
build-pi_logic_-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-afedb58c63397d313e3e.json  cmakeFiles-v1-97996becd4db3b9885a8.json  codemodel-v2-49e572d812eb94a91137.json  index-2023-09-09T07-21-54-0174.json  target-pi_logic_-Debug-033573e021a04fa890cd.json  target-pi_logic__autogen-Debug-ebaed9f09c1c93411ece.json  target-pi_logic__autogen_timestamp_deps-Debug-5f9cb9563ba10328d0d5.json
build-pi_logic_-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-pi_logic_-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.D1880C406AC0921A.idx  align.h.39AE23050B3DB93E.idx  alloca.h.B3C3404035C15EA6.idx  atomic_base.h.F118387B313E4F7F.idx  cstddef.337D34E624285F88.idx  cstdint.131423F6DD978BF6.idx  cxxabi_init_exception.h.430CE6EB8B5EC125.idx  limits.h.393FA0B903877225.idx  locale.h.5F1EA2E91D0CD92F.idx  main.cpp.D23E58D4EA971B2C.idx  mainwindow.cpp.0215C3D0CE5338BA.idx  mainwindow.h.26226EFDC615F549.idx  qbytearray.h.B9342019FB36475F.idx  qbytearraylist.h.7FE55569A27AE7FC.idx  qcoreevent.h.D2170B6AE7CEF77F.idx  qflags.h.041ACBB7FBD8C35E.idx  qglobal.h.2C17EABD0E130173.idx  qglobalstatic.h.C307E4126E57384E.idx  qkeysequence.h.78226F11FFFA3CF7.idx  qlist.h.F3A1871DE33D9905.idx  qlocale.h.5BBA25091CA1C3DF.idx  qmetatype.h.19B847AEC93D6BFD.idx  (+20 more)
build-pi_logic_-Desktop-Debug/pi_logic__autogen/: deps
inc/: mainwindow.h
src/: mainwindow.cpp  mainwindow.ui
